# aoc2018

./: .ghcid  README.md  aoc2018.cabal  stack.yaml
src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs  Paths_aoc2018.hs
src/Control/Monad/: Scanner.hs
src/Data/: Digraph.hs  Universe.hs
