name: aoc2018
version: 1.0.0
-- synopsis:
-- description:
-- license:
license-file: LICENSE
author: Jordan Mackie
maintainer: jmackie@protonmail.com
data-files:
    data/day1.txt
-- copyright:
-- category:
build-type: Simple
cabal-version: >=1.10


executable aoc2018
    main-is:
        Main.hs
    hs-source-dirs:
        src
    other-modules:
        Day1
    build-depends:
        base >=4.11 && <4.12
      , containers
      , text
    ghc-options:
        -Weverything
        -fno-warn-missing-import-lists
        -fno-warn-safe
        -fno-warn-unsafe
        -fno-warn-all-missed-specialisations
    default-language:
        Haskell2010
    default-extensions:
        NoImplicitPrelude
