name: aoc2018
version: 1.0.0
-- synopsis:
-- description:
-- license:
license-file: LICENSE
author: Jordan Mackie
maintainer: jmackie@protonmail.com
-- copyright:
-- category:
build-type: Simple
cabal-version: >=1.10
data-files:
    data/day1.txt
    data/day2.txt
    data/day3.txt
    data/day4.txt
    data/day5.txt
    data/day6.txt


executable aoc2018
    main-is:
        Main.hs
    hs-source-dirs:
        src
    other-modules:
        Paths_aoc2018

        Day1
        Day2
        Day3
        Day4
        Day5
        Day6
    build-depends:
        base >=4.11 && <4.12
      , attoparsec
      , containers
      , text
    ghc-options:
        -Weverything
        -fno-warn-missing-import-lists
        -fno-warn-safe
        -fno-warn-unsafe
        -fno-warn-all-missed-specialisations
    default-language:
        Haskell2010
    default-extensions:
        NoImplicitPrelude
